--- a/jogo.html
+++ b/jogo.html
@@ -11,7 +11,7 @@
         <h1>Shrek - Back to School</h1>
         <ul>
             <li><a href="#" target="_blank">Home Page</a></li>
-            <li><a href="#" target="_blank">Jogar</a></li>
+            <li><a href="https://github.com/OCTS-Desenvolvimentos/GAME.git" target="_blank">Jogar</a></li>
             <li><a href="#" target="_blank">Redes Sociais</a></li>
         </ul>
     </header>
