arruma a tela do jogo

--- a/jogo.html
+++ b/jogo.html
@@ -55,7 +55,7 @@
      <br>
      <br>
 
-    <a href="#" class="button">
+    <a href="https://github.com/OCTS-Desenvolvimentos/GAME" class="button">
         <p class="format">Jogue agora!</p>
     </a>  
 
